# qoraal-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_and_run.bat  build_and_run.sh
include/qoraal-engine/: config.h  engine.h  starter.h
include/qoraal-engine/parts/: parts.h
src/: CMakeLists.txt  engine.c  starter.c
src/parts/: console.c  debug.c  engine.c  parts.c  toaster.c
src/port/: engine_qoraal.c
src/qshell/: enginecmd.c
src/tool/: machine.c  machine.h  parse.c  parse.h
test/: CMakeLists.txt  main.c  platform.c  toaster.e
test/platform/: platform.c  platform.h
test/utests/: timers_test.e
